# daily-paper-agent

./: .gitignore  AGENTS.md  LICENSE  README.md  REFACTORING_NOTES.md  config.example.yaml  config.py  main.py  pyproject.toml  run_daily_agent.sh  tools_api.py
pipeline/: bedrock_client.py  fetch_stage.py  filter_stage.py  gemini_client.py  llm_client.py  llm_factory.py  logger.py  ranking_stage.py  report_stage.py  slack_notifier.py  summary_stage.py
prompts/: create-spec.example.md  rank-papers.md  refine-spec.md  spec.example.md
tests/: test-cases.example.yaml  test-cases.example.yml
tools/: arxiv_tool.py  hf_daily_tool.py  models.py  refine_spec.py  test_scoring.py
